Implement producer app

--- a/app1/conf/application.conf
+++ b/app1/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="gG[Zo?1rS<B>7^VjC/Im8;lUH[8<?e73GtEaCm^44vv4u9wC689S?pEMS4TsZ]VV"
+application.secret="a?Ocv/`mB6=@cWn^rZ=RbE`C5iM>]x<Di:@41=Ok:HehTdV]ypOL27GI>qn>k31w"
 
 # The application languages
 # ~~~~~
@@ -15,7 +15,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=global.Global
 
 # Router
 # ~~~~~
@@ -23,9 +23,9 @@ application.langs="en"
 # This router will be looked up first when the application is starting up,
 # so make sure this is the entry point.
 # Furthermore, it's assumed your route file is named properly.
-# So for an application router like `conf/my.application.Router`,
-# you may need to define a router file `my.application.routes`.
-# Default to Routes in the root package (and `conf/routes`)
+# So for an application router like `my.application.Router`,
+# you may need to define a router file `conf/my.application.routes`.
+# Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
 # Database configuration
@@ -37,21 +37,11 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
-#
-# You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-
-# Ebean configuration
-# ~~~~~
-# You can declare as many Ebean servers as you want.
-# By convention, the default server is named `default`
-#
-# ebean.default="models.*"
 
 # Logger
 # ~~~~~
